added redux to manage state of current theme

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -25,6 +25,7 @@
     --input: 243 100% 69.4%;
     --ring: 243 100% 69.4%;
     --radius: 0.5rem;
+    --text: 243 50% 10%;
   }
 
   .dark {
@@ -48,6 +49,7 @@
     --input: 243 30% 50%;
     --ring: 243 100% 69.4%;
     --radius: 0.5rem;
+    --text: 243 100% 100%;
   }
 
 }
