--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -56,7 +56,7 @@
 
 @layer base {
   * {
-    @apply border-border transition-all duration-500;
+    @apply border-border transition-colors duration-500;
   }
 
   body {
